# hippius-s3

./: .dockerignore  .env.defaults  .env.example  .env.test  .env.test-base  .env.test-docker  .env.test-e2e  .env.test-local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.drain  K8S-MIGRATION-GUIDE.md  MONITORING.md  README.dev.md  README.md  REDIS_CLUSTER_MIGRATION.md  SQL_RESTORE_FROM_BACKUP.md  backup-psql.sh  deny.toml  disk-failure-playbook.md  docker-compose.cluster.yml  docker-compose.e2e.yml  docker-compose.monitoring.yml  docker-compose.prod.cluster.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.utilities.yml  docker-compose.yml  pinner_dlq_plan.md  plan.md  plan2.md  pr146-review-findings.md  pyproject.toml  pyproject_mypy_plugin.txt  redis-cluster.conf  redis.conf  (+9 more)
.github/workflows/: ci.yml  deploy.yaml  k8s-deploy.yaml  k8s-production.yml  k8s-staging.yml  production-daily-benchmark.yml  production-deploy.yaml  production-smoke-tests.yml  production.yml  smoke-tests.yml  staging-bench.yml  staging-daily-benchmark.yml  staging-deploy.yaml  staging-smoke-tests.yml  staging.yml  test-and-lint.yml  test.yml
benchmark/: .env.example  .gitignore  README.md  benchmark.py  daily_bench.py  plot_results.py  requirements.txt
cacher/: README.md  entrypoint.sh  run_cacher.py  run_cacher.sh
crates/hippius-drain-agent/: Cargo.toml
crates/hippius-drain-agent/src/: config.rs  disk.rs  enqueue.rs  lib.rs  localfs.rs  main.rs  metrics.rs  runtime.rs  supervisor.rs  worker.rs
crates/hippius-drain-allocator/: Cargo.toml
crates/hippius-drain-allocator/src/: config.rs  lib.rs  main.rs  metrics.rs  probe.rs  run.rs
crates/hippius-drain-core/: Cargo.toml
crates/hippius-drain-core/migrations/: 0001_node_state.sql  0002_allocation.sql  0003_leader_lease.sql  0004_gc_state.sql  0005_replication_status.sql  0006_replication_status_node.sql  0007_claim_seq.sql  0008_replication_deferred_until.sql  0009_drop_cephor_coordination_tables.sql
crates/hippius-drain-core/proptest-regressions/: alloc.txt  apipart.txt  ids.txt  units.txt
crates/hippius-drain-core/src/: alloc.rs  apipart.rs  clock.rs  coordination.rs  enforce.rs  error.rs  gc.rs  ids.rs  lib.rs  mgr.rs  partdrain.rs  reconcile.rs  snapshot.rs  ssd_reclaim.rs  state.rs  store.rs  tick.rs  units.rs
crates/hippius-drain-core/tests/it/: allocator.rs  enforcer.rs  main.rs  table.rs
docs/: acceptable-use-policy.md  comparison.md  component-architecture.md  drain-direct-rollout.md  ec_plan.md  flow-object-reader.md  fs_store_plan.md  manifest-policy.md  migration-plan.md  monitoring-architecture.md  object-migration.md  s3-compatibility.md  s4.md  sequence-dlq-requeue.md  sequence-substrate-retry.md  sequence-upload-publish.md  state-object-lifecycle.md  versioning-strategy.md
docs/flows/: upload-download.md
docs/plans/: 2026-06-18-hippius-drain-live-ceph-probe-design.md  2026-06-18-hippius-drain-remaining-work.md
e2e/ec-isa-l/: Dockerfile  app.py
examples/: benchmark.py  config.py  create_test_files.sh  encryption_demo.sh  example_bucket_isolation.py  example_delete.py  example_minio.py  presigned-urls-demo.md
examples/js/: README.md  package.json  upload_and_presign.js
examples/py/: README.md  async_hippius_client.py  boto3_example.py  upload_and_presign.py
gateway/: CLAUDE.md  Dockerfile  config.py  main.py  start-gateway.sh  substrate_client.py
gateway/middlewares/: CLAUDE.md  access_key_auth.py  account.py  acl.py  ats_purge.py  audit_log.py  auth_probe.py  auth_router.py  banhammer.py  cache_control.py  cache_invalidation.py  cors.py  frontend_hmac.py  input_validation.py  metrics.py  rate_limit.py  ray_id.py  read_only.py  sigv4.py  tracing.py  trailing_slash.py
gateway/models/: __init__.py
gateway/repositories/: cached_acl_repository.py
gateway/routers/: acl.py  docs.py
gateway/services/: CLAUDE.md  account_service.py  acl_service.py  ats_cache_client.py  auth_cache.py  auth_orchestrator.py  auth_service.py  docs_proxy_service.py  forward_service.py  sub_token_scope.py  sub_token_scope_cache.py
gateway/templates/: redoc.html  swagger_ui.html
gateway/utils/: errors.py
hippius-s3/docs/: component-architecture.md  sequence-resilient-publish.md  sequence-substrate-retry.md  sequence-upload-publish.md  state-object-lifecycle.md
hippius_s3/: __init__.py  backend_routing.py  config.py  db_pool.py  dependencies.py  fs_pressure.py  ipfs_service.py  logging_config.py  main.py  metrics_collector_task.py  monitoring.py  otel_setup.py  queue.py  redis_cache.py  redis_chain.py  redis_utils.py  sentry.py  storage_version.py  substrate_client.py  tracing.py  utils.py  utils_core.py  xml_helpers.py
k8s/: README.md  migrate-recent-uploads-index-apply.yaml  migrate-recent-uploads-index-dryrun.yaml
migrator/: Dockerfile  entrypoint.py
pinner/: Dockerfile  run_pinner_in_loop.py  run_unpinner_in_loop.py
scripts/: CLAUDE.md  bench_multipart.py  benchmark.html  delete-bucket.sh  deploy_smoke.py  evacuate_cache.sh  evacuate_status.sh  extract_failure_details.py  generate-grafana-configmap.sh  print_smoke_test_secrets.sh  retryable-mpu.md  retryable-mpu.py  run_smoke_subtoken_local.sh  s3-benchmark.py  s3-benchmark.sh  system-check.sh
specs/: s3-object-lock.md
tests/: README.md  pytest.ini
workers/: CLAUDE.md  Dockerfile  README.md  cachet_health_check.py  chain_pin_checker.py  chain_profile_cacher.py  run_account_cacher_in_loop.py  run_api_uploader_in_loop.py  run_arion_downloader_in_loop.py  run_arion_unpinner_in_loop.py  run_arion_uploader_in_loop.py  run_backup_in_loop.py  run_disk_canary_in_loop.py  run_downloader_in_loop.py  run_ipfs_downloader_in_loop.py  run_ipfs_unpinner_in_loop.py  run_ipfs_uploader_in_loop.py  run_janitor_in_loop.py  run_manifest_builder_in_loop.py  run_migrator_once.py  run_mpu_reaper_in_loop.py  run_orphan_checker_in_loop.py  run_pinner_in_loop.py  run_redundancy_in_loop.py  run_substrate_in_loop.py  run_unpinner_in_loop.py  run_upload_promoter_in_loop.py  run_uploader_in_loop.py  substrate.py
(+762 files in other folders)
